--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Bon Appetit</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="Loret">Loret</string>
+
 </resources>
