--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Bon Appetit</string>
     <string name="scan_qr">Escanear Código QR</string>
+    <string name="scan_text"> Para el uso de esta aplicación es necesario
+        acceder a la cámara para escanear el código QR en su mesa favor de aceptar los permisos.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="Loret">Loret</string>
+    <string name="search">Buscar</string>
 
 </resources>
