Se agregan pantallas para seleccionar el tipo de login y pantalla para hacer el login, se agregan tambien las configuraciones de firebase y alguno de los iconos e imagenes para usar en el proyecto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
 
     <string name="Loret">Loret</string>
     <string name="search">Buscar</string>
+    <string name="txt_fogotPass">¿Olvidaste tu contraseña?</string>
+    <string name="noAccount">¿No tienes una cuenta?</string>
 
 </resources>
