Agregardo Screen, otras ventanas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,27 @@
 <resources>
     <string name="app_name">Bon Appetit</string>
     <string name="scan_qr">Escanear Código QR</string>
-    <string name="scan_text"> Para el uso de esta aplicación es necesario
-        acceder a la cámara para escanear el código QR en su mesa favor de aceptar los permisos.</string>
+    <string name="scan_text"> Es necesario escanear el código QR, por favor de aceptar los permisos.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="Loret">Loret</string>
     <string name="search">Buscar</string>
     <string name="txt_fogotPass">¿Olvidaste tu contraseña?</string>
     <string name="noAccount">¿No tienes una cuenta?</string>
+
+    <string name="textView_register">Registrarse</string>
+    <string name="text_name">Nombre</string>
+    <string name="text_user">Nombre de usuario</string>
+    <string name="text_email">Email</string>
+    <string name="text_password">Contraseña</string>
+    <string name="text_phone">Número de teléfono</string>
+    <string name="text_read_terms">Ver Terminos y Condiciones</string>
+    <string name="text_accept_terms">Aceptar Terminos y Condiciones</string>
+
+    <string name="text_btnRegistrarse">Registrarse</string>
+<!--    <string name="text_btnIngresar">Ingresar</string>-->
+<!--    <string name="text_btnUpdate">Actualizar</string>-->
+<!--    <string name="text_btnCancel">Cancelar</string>-->
+
 
 </resources>
