--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,11 @@
     <string name="search">Buscar</string>
     <string name="txt_fogotPass">¿Olvidaste tu contraseña?</string>
     <string name="noAccount">¿No tienes una cuenta?</string>
+    <string name="empty_field">Te falta llenar un campo</string>
+    <string name="network_error">Un error ha ocurrido</string>
+
+    <string name="understood">Entendido</string>
+
+
 
 </resources>
