--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,25 @@
     <string name="txt_fogotPass">¿Olvidaste tu contraseña?</string>
     <string name="noAccount">¿No tienes una cuenta?</string>
 
+    <!-- textos para la push simple -->
+    <string name="simple_title">Bon Appetit</string>
+    <string name="simple_body">¡Bienvenido a nuestra comunidad Bon Appetit!</string>
+
+    <!-- textos para la push con acción -->
+    <string name="action_title">Bon Appetit</string>
+    <string name="action_body">¡Tenemos estas ofertas para ti!</string>
+
+    <!-- textos para la push con botón -->
+    <string name="button_title">Bon Appetit</string>
+    <string name="button_body">Da click en el botón de abajo para ejecutar una acción</string>
+    <string name="button_text">Aceptar</string>
+
+
+    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+
+    <!-- CANAL CURSOS -->
+    <string name="channel_courses">Bon Appetit</string>
+    <string name="courses_description">Notificaciones acerca de Bon Appetit</string>
+
+
 </resources>
