--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!-- textos para la push simple -->
     <string name="simple_title">Bon Appetit</string>
     <string name="simple_body">¡Bienvenido a nuestra comunidad Bon Appetit!</string>
+    <string name="simple_body_2">¡Forma parte de Bon Appetit y registrate pronto!</string>
 
     <!-- textos para la push con acción -->
     <string name="action_title">Bon Appetit</string>
