--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="understood">Entendido</string>
     <string name="prefs_file">org.bedu.bonappetit.PREFERENCE_FILE_KEY</string>
 
+    <string name="default_web_client">1038898740472-5r8tjhje261rjoo0d5i81hjsmrsf2nq6.apps.googleusercontent.com</string>
+
+
+
 
 
     <!-- textos para la push simple -->
